config/k8s/istio-system.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: istio
  namespace: aks-istio-system
spec:
  mtls:
    mode: PERMISSIVE
