config/k8s/deployment.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: distributed-computing
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "false"
    # kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: public

spec:
  rules:
    - host: 42b0-145-116-39-50.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
    - host: distributed-computing.nickick.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/valkey
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "localhost:32000/distributed-computing:1.4"
          imagePullPolicy: Always
          command: ["npm", "run", "start-backend"]
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          # image: distributed-computing:1.4
          image: "localhost:32000/distributed-computing:1.4"
          imagePullPolicy: Always
          command: ["npm", "run", "start-worker"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-host
spec:
  externalName: redis-service.distributed-computing.svc.cluster.local
  selector:
    app: redis-host
  type: ExternalName

---
apiVersion: v1
kind: Service
metadata:
  name: backend-host
spec:
  externalName: backend-service.distributed-computing.svc.cluster.local
  selector:
    app: backend-host
  type: ExternalName

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: backend
      port: 3000
      targetPort: 3000
